feat: 增加出入库录入方式筛选
